--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Use this as base config, provide overrides in .env.local
 RACK_ENV=development
 RAILS_ENV=development
+PRIMARY_HOST=deadliner.dev
 GITHUB_ID=
 GITHUB_SECRET=
